--- a/.octocov.yml
+++ b/.octocov.yml
@@ -1,7 +1,7 @@
 central:
   reports:
     datastores:
-      - artifact://k1LoW/octocov # delete this line
+      - artifact://Tatsumi0000/nemomemo
       # - artifact://owner/repo
       # - artifact://owner/other-repo
       # - artifact://owner/another-repo
