--- a/.github/workflows/central.yml
+++ b/.github/workflows/central.yml
@@ -2,8 +2,8 @@ name: Collect
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0,3,6,9 * * *'
+  # schedule:
+  #   - cron: '0 0,3,6,9 * * *'
   push:
     branches:
       - main
